Fix scoreboard alignment

--- a/Code/UI/HUD/Scoreboard.razor.scss
+++ b/Code/UI/HUD/Scoreboard.razor.scss
@@ -85,6 +85,7 @@ Scoreboard
             {
                 flex-basis: 100px;
                 align-items: center;
+                text-align: right;
             }
 
             .stat-small
